--- a/RunnuingShoes/Views/Home/Index.cshtml
+++ b/RunnuingShoes/Views/Home/Index.cshtml
@@ -3,6 +3,7 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <h1 class="jumbotron">Running Shoes</h1>
+    <p>The admirable running shoes list by The AC Inc.</p>
 </div>
+<footer>copiadireito 2020 NotdesignCode</footer>
